--- a/gradoop-store/gradoop-accumulo/pom.xml
+++ b/gradoop-store/gradoop-accumulo/pom.xml
@@ -125,6 +125,10 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-scm-publish-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 
