--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@
         <plugin.maven-surefire.version>2.19.1</plugin.maven-surefire.version>
         <plugin.maven-shade.version>2.4.3</plugin.maven-shade.version>
         <plugin.maven-source.version>3.0.1</plugin.maven-source.version>
-        <plugin.maven-javadoc.version>2.9.1</plugin.maven-javadoc.version>
+        <plugin.maven-javadoc.version>3.0.1</plugin.maven-javadoc.version>
         <plugin.maven-gpg.version>1.6</plugin.maven-gpg.version>
         <plugin.maven-nexus-staging.version>1.6.7</plugin.maven-nexus-staging.version>
     </properties>
@@ -200,6 +200,66 @@
                             <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                             <autoReleaseAfterClose>false</autoReleaseAfterClose>
                         </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>javadoc</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-site-plugin</artifactId>
+                        <version>3.4</version>
+                        <configuration>
+                            <skip>true</skip>
+                            <skipDeploy>true</skipDeploy>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <configuration>
+                            <doclint>none</doclint>
+                            <outputDirectory>${project.build.directory}/apidocs</outputDirectory>
+                            <reportOutputDirectory>${project.build.directory}</reportOutputDirectory>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>javadoc</id>
+                                <goals>
+                                    <goal>javadoc</goal>
+                                </goals>
+                                <phase>site</phase>
+                            </execution>
+                            <!--<execution>-->
+                                <!--<id>aggregate</id>-->
+                                <!--<goals>-->
+                                    <!--<goal>aggregate</goal>-->
+                                <!--</goals>-->
+                                <!--<phase>site</phase>-->
+                            <!--</execution>-->
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-scm-publish-plugin</artifactId>
+                        <version>1.1</version>
+                        <configuration>
+                            <serverId>github</serverId>
+                            <pubScmUrl>scm:git:https://github.com/galpha/gradoop.git</pubScmUrl>
+                            <scmBranch>gh-pages</scmBranch>
+                            <checkinComment>Updated JavaDocs via Maven</checkinComment>
+                            <content>${project.build.directory}/apidocs</content>
+                            <siteOutputEncoding>UTF-8</siteOutputEncoding>
+                            <tryUpdate>true</tryUpdate>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>publish-scm</goal>
+                                </goals>
+                                <phase>site</phase>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
@@ -354,17 +414,10 @@
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>${plugin.maven-javadoc.version}</version>
                     <configuration>
-                        <additionalparam>-Xdoclint:none</additionalparam>
+                        <quiet>true</quiet>
+                        <doclint>none</doclint>
+                        <detectOfflineLinks>false</detectOfflineLinks>
                     </configuration>
-                    <executions>
-                        <execution>
-                            <id>attach-javadocs</id>
-                            <phase>deploy</phase>
-                            <goals>
-                                <goal>jar</goal>
-                            </goals>
-                        </execution>
-                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
