--- a/pom.xml
+++ b/pom.xml
@@ -421,7 +421,7 @@
                         <excludes>
                             <exclude>**/*TestBase*.class</exclude>
                         </excludes>
-                        <argLine>@{argLine} -Xmx1G -Dlog4j.configuration=${log4j.properties}</argLine>
+                        <argLine>-Xmx1G -Dlog4j.configuration=${log4j.properties}</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
