--- a/gradoop-flink/pom.xml
+++ b/gradoop-flink/pom.xml
@@ -149,6 +149,12 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-hadoop-compatibility_2.11</artifactId>
         </dependency>
+        
+        <dependency>
+        	<groupId>org.apache.flink</groupId>
+    		<artifactId>flink-jdbc</artifactId>
+    		<version>1.5.2</version>
+        </dependency>
 
         <!-- Test dependencies -->
 
