[#954] reset autoRelease to false

--- a/pom.xml
+++ b/pom.xml
@@ -203,7 +203,7 @@
                         <configuration>
                             <serverId>release_artifacts_gradoop</serverId>
                             <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                            <autoReleaseAfterClose>false</autoReleaseAfterClose>
                         </configuration>
                     </plugin>
                 </plugins>
