[#943] Test abstract classes using Mockito
* add mocking framework mockito as dependency to project
* add test suite for abstract class Element
* add test suite for abstract class GraphElement

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,7 @@
         <dep.jsonassert.version>1.2.3</dep.jsonassert.version>
         <dep.kryo.version>4.0.2</dep.kryo.version>
         <dep.log4j.version>1.2.17</dep.log4j.version>
+        <dep.mockito.version>2.21.0</dep.mockito.version>
 
         <log4j.properties>log4j-test.properties</log4j.properties>
         <argLine>-Xmx1G -Dlog4j.configuration=${log4j.properties}</argLine>
@@ -705,6 +706,14 @@
                 <version>${dep.junit.version}</version>
                 <scope>test</scope>
             </dependency>
+
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>${dep.mockito.version}</version>
+                <scope>test</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 </project>
