--- a/gradoop-flink/pom.xml
+++ b/gradoop-flink/pom.xml
@@ -150,6 +150,11 @@
             <artifactId>flink-hadoop-compatibility_2.11</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-shaded-hadoop2</artifactId>
+        </dependency>
+
         <!-- Test dependencies -->
 
         <!-- Gradoop -->
