--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
         <!-- alpha order require -->
         <dep.accumulo.version>1.9.0</dep.accumulo.version>
         <dep.bson.version>3.6.3</dep.bson.version>
-        <dep.flink.version>1.5.0</dep.flink.version>
+        <dep.flink.version>1.6.0</dep.flink.version>
         <dep.gdl.version>0.3</dep.gdl.version>
         <dep.hbase.version>1.4.3</dep.hbase.version>
         <dep.javafastpfor.version>0.1.10</dep.javafastpfor.version>
@@ -569,6 +569,12 @@
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-hadoop-compatibility_2.11</artifactId>
                 <version>${dep.flink.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-shaded-hadoop2</artifactId>
+                <version>1.6.0</version>
             </dependency>
 
             <!-- Accumulo -->
