--- a/gradoop-flink/pom.xml
+++ b/gradoop-flink/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.gradoop</groupId>
         <artifactId>gradoop-parent</artifactId>
-        <version>0.5.0-SNAPSHOT</version>
+        <version>0.4.1</version>
     </parent>
 
     <artifactId>gradoop-flink</artifactId>
