--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>gradoop-checkstyle</module>
         <module>gradoop-store</module>
         <module>gradoop-data-integration</module>
+        <module>gradoop-jmh-benchmarking</module>
     </modules>
 
     <developers>
