--- a/gradoop-jmh-benchmarking/pom.xml
+++ b/gradoop-jmh-benchmarking/pom.xml
@@ -50,6 +50,15 @@ THE POSSIBILITY OF SUCH DAMAGE.
 
     <dependencies>
         <dependency>
+            <groupId>org.gradoop</groupId>
+            <artifactId>gradoop-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-core</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-core</artifactId>
             <version>${jmh.version}</version>
@@ -80,6 +89,13 @@ THE POSSIBILITY OF SUCH DAMAGE.
           -->
         <uberjar.name>benchmarks</uberjar.name>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>release_artifacts_gradoop</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
