--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -159,5 +159,11 @@
             <artifactId>log4j</artifactId>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
