--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
         <!-- alpha order require -->
         <dep.accumulo.version>1.9.0</dep.accumulo.version>
         <dep.bson.version>3.6.3</dep.bson.version>
+        <dep.commons-cli.version>1.4</dep.commons-cli.version>
         <dep.flink.version>1.5.0</dep.flink.version>
         <dep.gdl.version>0.3</dep.gdl.version>
         <dep.hbase.version>1.4.3</dep.hbase.version>
@@ -629,6 +630,12 @@
                 <groupId>org.mongodb</groupId>
                 <artifactId>bson</artifactId>
                 <version>${dep.bson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-cli</groupId>
+                <artifactId>commons-cli</artifactId>
+                <version>${dep.commons-cli.version}</version>
             </dependency>
 
             <!-- Test dependencies -->
