--- a/gradoop-jmh-benchmarking/pom.xml
+++ b/gradoop-jmh-benchmarking/pom.xml
@@ -69,6 +69,10 @@ THE POSSIBILITY OF SUCH DAMAGE.
             <version>${jmh.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
