--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.gradoop</groupId>
         <artifactId>gradoop-parent</artifactId>
-        <version>0.4.2</version>
+        <version>0.5.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>gradoop-examples</artifactId>
