--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -141,6 +141,12 @@
             <artifactId>gradoop-flink</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.gradoop</groupId>
+            <artifactId>gradoop-hbase</artifactId>
+            <version>0.5.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- Flink -->
         <dependency>
             <groupId>org.apache.flink</groupId>
