[#998] add allow failures

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,10 @@ os:
   - osx
   - windows
   
-allow_failures:
-  - osx
-  - windows
+matrix:
+  allow_failures:
+    - os: osx
+    - os: windows
 
 cache:
   directories:
