--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,16 @@
 sudo: required
 dist: trusty
 
+os:
+  - linux
+  - osx
+  - windows
+  
+matrix:
+  allow_failures:
+    - os: osx
+    - os: windows
+
 cache:
   directories:
   - $HOME/.m2
