--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -96,6 +97,21 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
+            <!--
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -106,12 +122,12 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <minimizeJar>true</minimizeJar>
+                            <minimizeJar>false</minimizeJar>
                             <artifactSet>
                                 <includes>
                                     <!-- libs that are not provided by flink binary -->
                                     <include>org.apache.hbase:hbase-common</include>
-                                    <include>org.apache.flink:flink-gelly_2.11</include>
+                                    <include>org.neo4j:*</include>
                                     <include>org.gradoop:*</include>
                                     <include>com.github.s1ck:gdl</include>
                                     <include>org.codehaus.jettison:jettison</include>
@@ -120,6 +136,17 @@
                                     <include>org.mongodb:bson</include>
                                     <include>me.lemire.integercompression:*</include>
                                     <include>commons-cli:*</include>
+                                    <!-- CAPF dependencies -->
+                                    <include>org.opencypher:*</include>
+                                    <include>org.apache.flink:flink-gelly_2.11</include>
+                                    <include>org.apache.flink:flink-table_2.11</include>
+                                    <include>org.parboiled:parboiled-scala_2.11</include>
+                                    <include>com.lihaoyi:ujson_2.11</include>
+                                    <include>com.lihaoyi:upickle_2.11</include>
+                                    <include>org.typelevel:cats-kernel_2.11</include>
+                                    <include>org.typelevel:cats-core_2.11</include>
+                                    <include>org.atnos:eff_2.11</include>
+                                    <include>org.parboiled:*</include>
                                 </includes>
                             </artifactSet>
                             <!-- relocate commons-cli to avoid issues with version used by flink -->
@@ -171,6 +198,5 @@
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
         </dependency>
-
     </dependencies>
 </project>
