--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -135,7 +135,6 @@
 
     <dependencies>
         <!-- Compile dependencies -->
-
         <dependency>
             <groupId>org.gradoop</groupId>
             <artifactId>gradoop-flink</artifactId>
@@ -144,7 +143,11 @@
         <dependency>
             <groupId>org.gradoop</groupId>
             <artifactId>gradoop-hbase</artifactId>
-            <version>0.5.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.gradoop</groupId>
+            <artifactId>gradoop-accumulo</artifactId>
         </dependency>
 
         <!-- Flink -->
