--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -147,6 +147,11 @@
             <artifactId>gradoop-flink</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.gradoop</groupId>
+            <artifactId>gradoop-data-integration</artifactId>
+        </dependency>
+
         <!-- Flink -->
         <dependency>
             <groupId>org.apache.flink</groupId>
