[#1066] Relocate Kryo and it's dependencies to avoid clashes with Flink.

--- a/pom.xml
+++ b/pom.xml
@@ -615,7 +615,7 @@
             <!-- Kryo -->
             <dependency>
                 <groupId>com.esotericsoftware</groupId>
-                <artifactId>kryo-shaded</artifactId>
+                <artifactId>kryo</artifactId>
                 <version>${dep.kryo.version}</version>
             </dependency>
 
