--- a/gradoop-common/pom.xml
+++ b/gradoop-common/pom.xml
@@ -163,8 +163,9 @@
         </dependency>
 
         <dependency>
-            <groupId>pl.pragmatists</groupId>
-            <artifactId>JUnitParams</artifactId>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.14.3</version>
             <scope>test</scope>
         </dependency>
 
