[#1024] Set minimzeJar true

--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -107,7 +107,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <minimizeJar>false</minimizeJar>
+                            <minimizeJar>true</minimizeJar>
                             <artifactSet>
                                 <includes>
                                     <!-- libs that are not provided by flink binary -->
