--- a/gradoop-examples/pom.xml
+++ b/gradoop-examples/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.gradoop</groupId>
         <artifactId>gradoop-parent</artifactId>
-        <version>0.5.0-SNAPSHOT</version>
+        <version>0.4.5</version>
     </parent>
 
     <artifactId>gradoop-examples</artifactId>
@@ -112,6 +112,7 @@
                                 <includes>
                                     <!-- libs that are not provided by flink binary -->
                                     <include>org.apache.hbase:hbase-common</include>
+                                    <include>org.apache.flink:flink-gelly_2.11</include>
                                     <include>org.neo4j:*</include>
                                     <include>org.gradoop:*</include>
                                     <include>com.github.s1ck:gdl</include>
