--- a/gradoop-store/pom.xml
+++ b/gradoop-store/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>gradoop-parent</artifactId>
         <groupId>org.gradoop</groupId>
-        <version>0.5.0-SNAPSHOT</version>
+        <version>0.4.5</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
